绘制编辑区域，于添加layer插件

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,8 +1,15 @@
 <html>
 	<head></head>
+	<link rel="stylesheet" type="text/css" href="http://localhost:3000/build/style/ViewEdit.css">
 	<body>
-		<div id="edit" style="position: relative; top: 300px;left: 300px;" page-key="key001" >
+		<div style="position: relative; top: 300px;left: 100px; height: 300px; width: 200px;" page-key="key001" >
 			<p>编辑区域</p>
+			<p><a href="">编辑链接</a></p>
+			<img src="" alt="">
+		</div>
+		<div style="position: relative; top: 300px;left: 100px; height: 300px; width: 200px;" page-key="key002" >
+			<p>编辑区域</p>
+			<p><a href="">编辑链接</a></p>
 			<img src="" alt="">
 		</div>
 	</body>
