--- a/demo/index.html
+++ b/demo/index.html
@@ -2,15 +2,16 @@
 	<head></head>
 	<link rel="stylesheet" type="text/css" href="http://localhost:3000/build/style/ViewEdit.css">
 	<body>
-		<div style="position: relative; top: 300px;left: 100px; height: 300px; width: 200px;" page-key="key001" >
+		<div style="position: relative; top: 300px;left: 100px; float: left;" page-key="key001" >
 			<p>编辑区域</p>
 			<p><a href="">编辑链接</a></p>
-			<img src="" alt="">
+			<img style="height: 300px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="" style="display: block;">
 		</div>
-		<div style="position: relative; top: 300px;left: 100px; height: 300px; width: 200px;" page-key="key002" >
+		<div style="position: relative; top: 300px;left: 100px;  float: left; " page-key="key002" >
 			<p>编辑区域</p>
 			<p><a href="">编辑链接</a></p>
-			<img src="" alt="">
+			<img style="height: 300px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="" style="display: block;">
+			<img style="height: 300px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="" style="display: block;">
 		</div>
 	</body>
 </html>
