--- a/demo/index.html
+++ b/demo/index.html
@@ -10,18 +10,21 @@
 		<div style="position: relative; top: 300px;left: 100px;  float: left; " page-key="key002" >
 			<p>编辑区域</p>
 			<p><a href="">编辑链接</a></p>
-			<img style="height: 300px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="" style="display: block;">
-			<img style="height: 300px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="" style="display: block;">
+			<a href="" style="display: block;"><img style="height: 300px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="" style="display: block;"></a>
+			<a href=""  style="display: block;"><img style="height: 300px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="" style="display: block;"></a>
 		</div>
 	</body>
 </html>
 <script type="text/javascript" src="http://localhost:3000/build/ViewEdit.js"></script>
 <script type="text/javascript">
-	var edit = VE.init({
+	window.onload = function(){
+		var edit = VE.init({
 			el:"page-key",
 			upload:{
 				server:"测试"
 			}
 		});
 	console.log(edit);
+	}
+	
 </script>
