调整 初始化编辑区域

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@
 		</div>
 	</body>
 </html>
-<script type="text/javascript" src="http://localhost:3000/dist/ViewEdit.js"></script>
+<script type="text/javascript" src="http://localhost:3000/build/ViewEdit.js"></script>
 <script type="text/javascript">
 	window.onload = function(){
 		var edit = VE.init({
