新增 模块自定义添加功能

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,11 +1,12 @@
+<!DOCTYPE html>
 <html>
 	<head></head>
 	<link rel="stylesheet" type="text/css" href="http://localhost:3000/build/style/ViewEdit.css">
 	<body>
 		<div style="position: relative; top: 300px;left: 100px; float: left;" page-key="key001" >
 			<p>编辑区域</p>
-			<p><a href="">编辑链接</a></p>
-			<img style="height: 300px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="" style="display: block;">
+			<p ><a href="">编辑链接</a></p>
+			<img ve-add-tpl  style="height: 300px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="" style="display: block;">
 		</div>
 		<div style="position: relative; top: 300px;left: 100px;  float: left; " page-key="key002" >
 			<p>编辑区域</p>
@@ -20,6 +21,9 @@
 	window.onload = function(){
 		var edit = VE.init({
 			el:"page-key",
+			formData:{
+				port:"wap",
+			},
 			upload:{
 				server:"测试"
 			}
