--- a/demo/index.html
+++ b/demo/index.html
@@ -3,16 +3,16 @@
 	<head></head>
 	<link rel="stylesheet" type="text/css" href="http://localhost:3000/build/style/ViewEdit.css">
 	<body>
-		<div style="position: relative; top: 300px;left: 100px; float: left;" page-key="key001" >
-			<p ve-add-tpl >编辑区域</p>
-			<p ><a href="">编辑链接</a></p>
-			<img   style="height: 300px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="" style="display: block;">
+		<div style="position: relative; top: 50px;left: 100px; float: left; width: 500px; padding: 10px; background: #f1f1f1; text-align: center;" page-key="key001" >
+			<p >双击编辑文本</p>
+			<p ><a href="">链接编辑</a></p>
+			<img ve-add-tpl style="height: 200px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="" style="display: block;">
 		</div>
-		<div style="position: relative; top: 300px;left: 100px;  float: left; " page-key="key002" >
+		<div style="position: relative; top: 50px;left: 100px; margin-left: 50px;padding: 10px; float: left; width: 500px;background: #f1f1f1; text-align: center; " page-key="key002" >
 			<p>编辑区域</p>
 			<p><a href="">编辑链接</a></p>
-			<a href="" style="display: block;"><img style="height: 300px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="" style="display: block;"></a>
-			<a href=""  style="display: block;"><img style="height: 300px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="" style="display: block;"></a>
+			<a href="" style="display: block; "><img style="height: 100px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="" style="display: block;"></a>
+			<a href=""  style="display: block;"><img style="height: 200px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="" style="display: block;"></a>
 		</div>
 	</body>
 </html>
