添加简易弹窗组件，popup （load、msg、open）弹窗组件

--- a/demo/index.html
+++ b/demo/index.html
@@ -95,12 +95,12 @@
 		*/
 		edit.on("uploadSuccess",function(event,file,response){
 			console.log(event,file,response)
-			alert("图片上传成功回调！");
+			//alert("图片上传成功回调！");
 		});
 
 		// 保存数据成功
 		edit.on("savedataSucces",function(isSucces,data){
-			alert("保存数据回到自定义处理！");
+			//alert("保存数据回到自定义处理！");
 			console.log(isSucces,data);
 		});
 		console.log(edit);
