解决修改时删除元素后报错

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,6 +7,9 @@
 		<div style="position: relative; left: 100px; float: left; width: 500px; padding: 10px; background: #f1f1f1; text-align: center;" page-key="key001" >
 			<p >双击编辑文本</p>
 			<p ><a href="">链接编辑</a></p>
+			<img ve-add-tpl="key001" style="height: 200px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="">
+			<img ve-add-tpl="key001" style="height: 200px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="">
+			<img ve-add-tpl="key001" style="height: 200px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="">
 			<img ve-add-tpl style="height: 200px;" data-original="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" src="http://pic.qiantucdn.com/58pic/22/06/55/57b2d9a265f53_1024.jpg?x-oss-process=image/resize,w_250,h_250" alt="" style="display: block;">
 		</div>
 		<div style="position: relative; left: 100px; margin-left: 50px;padding: 10px; float: left; width: 500px;background: #f1f1f1; text-align: center; " page-key="key002" >
