--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head></head>
-	<link rel="stylesheet" type="text/css" href="http://localhost:3000/build/style/ViewEdit.css">
+	<link rel="stylesheet" type="text/css" href="./dist/style/ViewEdit.css">
 	<body>
 		<div style="height: 50px;"></div>
 		<div style="position: relative; left: 100px; float: left; width: 500px; padding: 10px; background: #f1f1f1; text-align: center;" page-key="key001" >
@@ -83,8 +83,8 @@
 
 	</body>
 </html>
-<script type="text/javascript" src="http://localhost:3000/node_modules/jquery/dist/jquery.js"></script>
-<script type="text/javascript" src="http://localhost:3000/build/ViewEdit.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.12.4.js"></script>
+<script type="text/javascript" src="./dist/ViewEdit.js"></script>
 <script type="text/javascript">
 	window.onload = function(){
 
