--- a/demo/index.html
+++ b/demo/index.html
@@ -83,7 +83,7 @@
 
 	</body>
 </html>
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.12.4.js"></script>
+<!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.12.4.js"></script> -->
 <script type="text/javascript" src="../dist/ViewEdit.js"></script>
 <script type="text/javascript">
 	window.onload = function(){
